--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="practice layout one">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/normalize.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
@@ -19,101 +20,101 @@
         <div class="education-title">
             <i class="fas fa-graduation-cap fa-lg"></i>
             <h2 class="education-header">Education</h2>
-        </div>
+        </div> <!--End of education-title-->
         <hr>
         <div class="l-education">
             <i class="fas fa-bowling-ball fa-xs"></i>
             <div class="dates">
                 <p>Present</p>
                 <p>Location</p>
-            </div>
+            </div> <!--End of dates container-->
             <div class="description">
                 <h3>Open Classrooms</h3>
                 <h4><em>Dip. Junior Web Developer</em></h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis labore voluptates laboriosam harum eveniet animi, unde repudiandae beatae eligendi libero? Porro atque pariatur itaque aliquam rem adipisci laboriosam obcaecati natus.</p>
-            </div>
-        </div>
+            </div> <!--End of description container-->
+        </div> <!--End of l-education layout-->
         <div class="l-education">
             <i class="fas fa-bowling-ball fa-xs"></i>
             <div class="dates">
                 <p>xxxx-xxxx</p>
                 <p>Sheffield</p>
-            </div>
+            </div> <!--End of dates container-->
             <div class="description">
                 <h3>University of Sheffield</h3>
                 <h4><em>PhD. Political Economy</em></h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis labore voluptates laboriosam harum eveniet animi, unde repudiandae beatae eligendi libero? Porro atque pariatur itaque aliquam rem adipisci laboriosam obcaecati natus.</p>
-            </div>
-        </div>
+            </div> <!--End of description container-->
+        </div> <!--End of l-education layout-->
         <div class="l-education">
             <i class="fas fa-bowling-ball fa-xs"></i>
             <div class="dates">
                 <p>xxxx-xxxx</p>
                 <p>Cardiff</p>
-            </div>
+            </div> <!--End of dates container-->
             <div class="description">
                 <h3>University of Wales (Cardiff College)</h3>
                 <h4><em>MSc. Regional Development</em></h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis labore voluptates laboriosam harum eveniet animi, unde repudiandae beatae eligendi libero? Porro atque pariatur itaque aliquam rem adipisci laboriosam obcaecati natus.</p>
-            </div>
-        </div>
+            </div> <!--End of description container-->
+        </div> <!--End of l-education layout-->
         <div class="l-education">
             <i class="fas fa-bowling-ball fa-xs"></i>
             <div class="dates">
                 <p>xxxx-xxxx</p>
                 <p>Warwick</p>
-            </div>
+            </div> <!--End of dates container-->
             <div class="description">
                 <h3>University of Warwick</h3>
                 <h4><em>BSc. Microbiology & Virology</em></h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis labore voluptates laboriosam harum eveniet animi, unde repudiandae beatae eligendi libero? Porro atque pariatur itaque aliquam rem adipisci laboriosam obcaecati natus.</p>
-            </div>
-        </div>
+            </div> <!--End of description container-->
+        </div> <!--End of l-education layout-->
         <div class="experience-title">
             <i class="fas fa-briefcase fa-lg"></i>
             <h2 class="experience-header">Experience</h2>
-        </div>
+        </div> <!--End of Experience-title-->
         <hr>
         <div class="l-experience">
             <i class="fas fa-bowling-ball fa-xs"></i>
             <div class="dates">
                 <p>xxxx-xxxx</p>
                 <p>Location</p>
-            </div>
+            </div> <!--End of dates container-->
             <div class="company">
                 <h3>Company Name</h3>
                 <h4>Job Title One</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis labore voluptates laboriosam harum eveniet animi, unde repudiandae beatae eligendi libero? Porro atque pariatur itaque aliquam rem adipisci laboriosam obcaecati natus.</p>
-            </div>
-        </div>
+            </div> <!--End of company container-->
+        </div> <!--End of l-experience layout-->
         <div class="l-experience">
             <i class="fas fa-bowling-ball fa-xs"></i>
             <div class="dates">
                 <p>xxxx-xxxx</p>
                 <p>Location</p>
-            </div>
+            </div> <!--End of dates container-->
             <div class="company">
                 <h3>Company Name</h3>
                 <h4>Job Title Two</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis labore voluptates laboriosam harum eveniet animi, unde repudiandae beatae eligendi libero? Porro atque pariatur itaque aliquam rem adipisci laboriosam obcaecati natus.</p>
-            </div>
-        </div>
+            </div> <!--End of company container-->
+        </div> <!--End of l-experience layout-->
         <div class="l-experience">
             <i class="fas fa-bowling-ball fa-xs"></i>
             <div class="dates">
                 <p>xxxx-xxxx</p>
                 <p>Location</p>
-            </div>
+            </div> <!--End of dates container-->
             <div class="company">
                 <h3>Company Name</h3>
                 <h4>Job Title three</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis labore voluptates laboriosam harum eveniet animi, unde repudiandae beatae eligendi libero? Porro atque pariatur itaque aliquam rem adipisci laboriosam obcaecati natus.</p>
-            </div>
-        </div>
+            </div> <!--End of company container-->
+        </div> <!--End of l-experience layout-->
         <div class="references-title">
             <i class="fas fa-pen-fancy fa-lg"></i>
             <h2 class="references-header">References</h2>
-        </div>
+        </div> <!--End of reference-title-->
         <hr>
         <div class="l-reference">
             <div class="ref">
@@ -128,9 +129,9 @@
                 <p>Email: leroyagroves71@gmail.com</p>
                 <p>Tel: xxxxxxxxxxx</p>
             </div>
-        </div>
+        </div> <!--End of l-reference layout-->
         <hr>
-    </main>
+    </main> <!--End of main section-->
     <aside class="l-sidebar">
 
 
@@ -138,7 +139,7 @@
 
         <div class="contact-header">
             <h2>Contact</h2>
-        </div>
+        </div> <!--End of contact-header-->
         <div class="l-details-container">
             <div class="contact-details">
                 <h5>Address</h5>
@@ -160,16 +161,16 @@
                 <h5>Skype</h5>
                 <p>@username</p>
             </div>
-        </div>
+        </div> <!--End of l-details-container layout-->
         <div class="about-me-header">
             <h2>About Me</h2>
         </div>
         <div class="l-about-me-container">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi beatae dolorum sunt exercitationem ab tenetur unde, sint ipsam fugit adipisci perspiciatis praesentium facilis ducimus numquam, suscipit iste ad. Qui, veniam!</p>
-        </div>
+        </div> <!--End of l-about-me-container-->
         <div class="hobbies-header">
             <h2>Hobbies</h2>
-        </div>
+        </div> <!--End of hobbies-header-->
         <div class="l-hobbies-container">
             <div class="footer-images">
                 <div class="f-image">
@@ -181,10 +182,10 @@
                 <div class="f-image">
                     <i class="fas fa-hiking fa-3x"></i>
                 </div>
-            </div>
+            </div> <!--footer-images container-->
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae nemo autem consequatur harum obcaecati, voluptas explicabo quasi voluptatum recusandae alias! Eveniet nulla repellat tenetur quia dignissimos nam? Nulla, odio excepturi?</p>
-        </div>
+        </div> <!--End of l-hobbies-container-->
         <hr>
         <p class="w3c-validation-para">
             <a class="w3c-validation" href="http://jigsaw.w3.org/css-validator/check/referer">
@@ -194,7 +195,7 @@
             </a>
         </p>
 
-    </aside>
+    </aside> <!--End of l-Sidebar layout-->
 
 </body>
 
