--- a/index.html
+++ b/index.html
@@ -1,202 +1,261 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <title>Practice Layout One</title>
-    <meta charset="UTF-8">
-    <meta name="description" content="practice layout one">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-</head>
-
-<body>
-    <header class="l-header-main">
-        <h1><span class="christian-name">LEROY</span><span class="surname">GROVES</span></h1>
-        <h3><span class="freelance">Freela</span>nce Web Developer</h3>
-    </header>
-    <main class="l-main-content">
-        <div class="education-title">
+   <head>
+      <title>Practice Layout One</title>
+      <meta charset="UTF-8">
+      <meta name="description" content="practice layout one">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="css/normalize.css" type="text/css">
+      <link rel="stylesheet" href="css/style.css" type="text/css">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+   </head>
+   <body>
+      <header class="l-header-main">
+         <h1><span class="christian-name">LEROY</span><span class="surname">GROVES</span></h1>
+         <h3><span class="freelance">Freela</span>nce Web Developer</h3>
+         <hr class="header-hr">
+      </header>
+      <main class="l-main-content">
+         <div class="education-title">
             <i class="fas fa-graduation-cap fa-lg"></i>
             <h2 class="education-header">Education</h2>
-        </div> <!--End of education-title-->
-        <hr>
-        <div class="l-education">
+         </div>
+         <!--End of education-title-->
+         <hr>
+         <div class="l-education1">
             <i class="fas fa-bowling-ball fa-xs"></i>
             <div class="dates">
-                <p>Present</p>
-                <p>Location</p>
-            </div> <!--End of dates container-->
+               <p>Present - Aug 2019</p>
+               <p>Online</p>
+            </div>
+            <!--End of dates container-->
             <div class="description">
-                <h3>Open Classrooms</h3>
-                <h4><em>Dip. Junior Web Developer</em></h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis labore voluptates laboriosam harum eveniet animi, unde repudiandae beatae eligendi libero? Porro atque pariatur itaque aliquam rem adipisci laboriosam obcaecati natus.</p>
-            </div> <!--End of description container-->
-        </div> <!--End of l-education layout-->
-        <div class="l-education">
+               <h3><em>OPENCLASSROOMS</em></h3>
+               <h4><em>(Dip. Junior Web Developer)</em></h4>
+               <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Command Line</li>
+                  <li>git & Github</li>
+                  <li>Sass</li>
+               </ul>
+            </div>
+            <!--End of description container-->
+         </div>
+         <!--End of l-education layout-->
+         <div class="l-education2">
             <i class="fas fa-bowling-ball fa-xs"></i>
             <div class="dates">
-                <p>xxxx-xxxx</p>
-                <p>Sheffield</p>
-            </div> <!--End of dates container-->
+               <p>1996-2000</p>
+               <p>Sheffield</p>
+            </div>
+            <!--End of dates container-->
             <div class="description">
-                <h3>University of Sheffield</h3>
-                <h4><em>PhD. Political Economy</em></h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis labore voluptates laboriosam harum eveniet animi, unde repudiandae beatae eligendi libero? Porro atque pariatur itaque aliquam rem adipisci laboriosam obcaecati natus.</p>
-            </div> <!--End of description container-->
-        </div> <!--End of l-education layout-->
-        <div class="l-education">
+               <h3>University of Sheffield</h3>
+               <h4><em>(PhD. Political Economy)</em></h4>
+               <ul>
+                  <li>PhD title: <em>The Politics of Cultural Policy</em></li>
+                  <li>Research Methods</li>
+                  <li>Urban Governance</li>
+                  <li>Local Economic Development</li>
+               </ul>
+            </div>
+            <!--End of description container-->
+         </div>
+         <!--End of l-education layout-->
+         <div class="l-education3">
             <i class="fas fa-bowling-ball fa-xs"></i>
             <div class="dates">
-                <p>xxxx-xxxx</p>
-                <p>Cardiff</p>
-            </div> <!--End of dates container-->
+               <p>1992-1993</p>
+               <p>Cardiff</p>
+            </div>
+            <!--End of dates container-->
             <div class="description">
-                <h3>University of Wales (Cardiff College)</h3>
-                <h4><em>MSc. Regional Development</em></h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis labore voluptates laboriosam harum eveniet animi, unde repudiandae beatae eligendi libero? Porro atque pariatur itaque aliquam rem adipisci laboriosam obcaecati natus.</p>
-            </div> <!--End of description container-->
-        </div> <!--End of l-education layout-->
-        <div class="l-education">
+               <h3>University of Wales</h3>
+               <h4><em>(MSc. Regional Development)</em></h4>
+               <ul>
+                  <li>Local Economic Dev</li>
+                  <li>Technical Change & Regional Dev</li>
+                  <li>Research Methods</li>
+                  <li>Philosophy of Social Science</li>
+               </ul>
+            </div>
+            <!--End of description container-->
+         </div>
+         <!--End of l-education layout-->
+         <div class="l-education4">
             <i class="fas fa-bowling-ball fa-xs"></i>
             <div class="dates">
-                <p>xxxx-xxxx</p>
-                <p>Warwick</p>
-            </div> <!--End of dates container-->
+               <p>1989-1992</p>
+               <p>Warwick</p>
+            </div>
+            <!--End of dates container-->
             <div class="description">
-                <h3>University of Warwick</h3>
-                <h4><em>BSc. Microbiology & Virology</em></h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis labore voluptates laboriosam harum eveniet animi, unde repudiandae beatae eligendi libero? Porro atque pariatur itaque aliquam rem adipisci laboriosam obcaecati natus.</p>
-            </div> <!--End of description container-->
-        </div> <!--End of l-education layout-->
-        <div class="experience-title">
+               <h3>University of Warwick</h3>
+               <h4><em>(BSc. Microbiology & Virology)</em></h4>
+               <ul>
+                  <li>Virology</li>
+                  <li>Biochemistry</li>
+                  <li>Bacteriology</li>
+                  <li>Immunology</li>
+                  <li>Statistics & Calculus</li>
+               </ul>
+            </div>
+            <!--End of description container-->
+         </div>
+         <!--End of l-education layout-->
+         <div class="experience-title">
             <i class="fas fa-briefcase fa-lg"></i>
             <h2 class="experience-header">Experience</h2>
-        </div> <!--End of Experience-title-->
-        <hr>
-        <div class="l-experience">
+         </div>
+         <!--End of Experience-title-->
+         <hr>
+         <div class="l-experience">
             <i class="fas fa-bowling-ball fa-xs"></i>
             <div class="dates">
-                <p>xxxx-xxxx</p>
-                <p>Location</p>
-            </div> <!--End of dates container-->
+               <p>Present</p>
+               <p>Doncaster</p>
+            </div>
+            <!--End of dates container-->
             <div class="company">
-                <h3>Company Name</h3>
-                <h4>Job Title One</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis labore voluptates laboriosam harum eveniet animi, unde repudiandae beatae eligendi libero? Porro atque pariatur itaque aliquam rem adipisci laboriosam obcaecati natus.</p>
-            </div> <!--End of company container-->
-        </div> <!--End of l-experience layout-->
-        <div class="l-experience">
+               <h3>Capita Plc</h3>
+               <h4>Customer Services Adviser</h4>
+            </div>
+            <!--End of company container-->
+         </div>
+         <!--End of l-experience layout-->
+         <div class="l-experience">
             <i class="fas fa-bowling-ball fa-xs"></i>
             <div class="dates">
-                <p>xxxx-xxxx</p>
-                <p>Location</p>
-            </div> <!--End of dates container-->
+               <p>Jan-April 2017</p>
+               <p>Sheffield</p>
+            </div>
+            <!--End of dates container-->
             <div class="company">
-                <h3>Company Name</h3>
-                <h4>Job Title Two</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis labore voluptates laboriosam harum eveniet animi, unde repudiandae beatae eligendi libero? Porro atque pariatur itaque aliquam rem adipisci laboriosam obcaecati natus.</p>
-            </div> <!--End of company container-->
-        </div> <!--End of l-experience layout-->
-        <div class="l-experience">
+               <h3>Aviva Insurance Plc</h3>
+               <h4>Customer Services Adviser</h4>
+            </div>
+            <!--End of company container-->
+         </div>
+         <!--End of l-experience layout-->
+         <div class="l-experience">
             <i class="fas fa-bowling-ball fa-xs"></i>
             <div class="dates">
-                <p>xxxx-xxxx</p>
-                <p>Location</p>
-            </div> <!--End of dates container-->
+               <p>2014-2016</p>
+               <p>Sheffield</p>
+            </div>
+            <!--End of dates container-->
             <div class="company">
-                <h3>Company Name</h3>
-                <h4>Job Title three</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis labore voluptates laboriosam harum eveniet animi, unde repudiandae beatae eligendi libero? Porro atque pariatur itaque aliquam rem adipisci laboriosam obcaecati natus.</p>
-            </div> <!--End of company container-->
-        </div> <!--End of l-experience layout-->
-        <div class="references-title">
+               <h3>PeoplePlus Plc</h3>
+               <h4>Administrative Coordinator</h4>
+            </div>
+            <!--End of company container-->
+         </div>
+         <!--End of l-experience layout-->
+         <div class="references-title">
             <i class="fas fa-pen-fancy fa-lg"></i>
             <h2 class="references-header">References</h2>
-        </div> <!--End of reference-title-->
-        <hr>
-        <div class="l-reference">
-            <div class="ref">
-                <h3>Name</h3>
-                <h4>Position</h4>
-                <p>Email: leroyagroves71@gmail.com</p>
-                <p>Tel: xxxxxxxxxxx</p>
+         </div>
+         <!--End of reference-title-->
+         <hr>
+         <div class="l-reference">
+            <div class="ref ref1">
+               <h3>DWP (Shared Services)</h3>
+               <p>Newcastle Employee Centre, Block 9</p>
+               <p>Belsay House, Benton Park View</p>
+               <p>Longbenton</p>
+               <p>Newcastle Upon Tyne</p>
+               <p>NE981YX</p>
+               <p>Tel: 08435047178</p>
             </div>
-            <div class="ref">
-                <h3>Name</h3>
-                <h4>Position</h4>
-                <p>Email: leroyagroves71@gmail.com</p>
-                <p>Tel: xxxxxxxxxxx</p>
+            <div class="ref ref2">
+               <h3>PeoplePlus Ltd</h3>
+               <p>Craig Shepherd</p>
+               <p>Queens House</p>
+               <p>Queens Street</p>
+               <p>Sheffield</p>
+               <p>S11GN</p>
+               <p>E:craig.shepherd@peopleplus.co.uk</p>
+               <p>Tel: 07435754092</p>
             </div>
-        </div> <!--End of l-reference layout-->
-        <hr>
-    </main> <!--End of main section-->
-    <aside class="l-sidebar">
-
-
-        <a href="https://placeholder.com"><img src="https://via.placeholder.com/150" alt="circular photo"></a>
-
-        <div class="contact-header">
+         </div>
+         <!--End of l-reference layout-->
+         <hr>
+      </main>
+      <!--End of main section-->
+      <aside class="l-sidebar">
+         <div class="img-container">
+            <img src="imges/papersco-b_lCwJj2BP.jpg" alt="circular photo" width="200" height="200">
+         </div>
+         <div class="contact-header">
             <h2>Contact</h2>
-        </div> <!--End of contact-header-->
-        <div class="l-details-container">
+         </div>
+         <!--End of contact-header-->
+         <div class="l-details-container">
             <div class="contact-details">
-                <h5>Address</h5>
-                <p>Yorkshire, UK</p>
+               <h5>Address</h5>
+               <p>Yorkshire, UK</p>
             </div>
             <div class="contact-details">
-                <h5>Mobile</h5>
-                <p>xxxxxxxxxxx</p>
+               <h5>Mobile</h5>
+               <p>xxxxxxxxxxx</p>
             </div>
             <div class="contact-details">
-                <h5>Email</h5>
-                <p>leroyagroves71@gmail.com</p>
+               <h5>Email</h5>
+               <p>leroyagroves71@gmail.com</p>
             </div>
             <div class="contact-details">
-                <h5>Website</h5>
-                <p>www.name.io</p>
+               <h5>Website</h5>
+               <p>www.name.io</p>
             </div>
             <div class="contact-details">
-                <h5>Skype</h5>
-                <p>@username</p>
+               <h5>Skype</h5>
+               <p>@username</p>
             </div>
-        </div> <!--End of l-details-container layout-->
-        <div class="about-me-header">
+         </div>
+         <!--End of l-details-container layout-->
+         <div class="about-me-header">
             <h2>About Me</h2>
-        </div>
-        <div class="l-about-me-container">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi beatae dolorum sunt exercitationem ab tenetur unde, sint ipsam fugit adipisci perspiciatis praesentium facilis ducimus numquam, suscipit iste ad. Qui, veniam!</p>
-        </div> <!--End of l-about-me-container-->
-        <div class="hobbies-header">
+         </div>
+         <div class="l-about-me-container">
+            <p>Hi I hope find this CV/Resume to be interesting reading. I am a <strong>'Career Changer'</strong>. As you will see from this CV, I began my working life as a Social Researcher, having worked for the British Civil Service (as a <em>Project Manager/Senior Research Officer</em>) and the University Sector (as a <em>Post Doc Researcher</em>).
+            </p>
+            <p>During the past two years I have become fascinated with web development and coding and have become a 'hobbyst' coder focusing primarily on Javascript. Inorder to add structure to my development and gain useful guidance and mentoring I have enrolled in the <em>Open Classrooms <a href="https://openclassrooms.com/en/paths/141-junior-web-developer">'Junior Developer Diploma'</a></em> programme</p>
+         </div>
+         <!--End of l-about-me-container-->
+         <div class="hobbies-header">
             <h2>Hobbies</h2>
-        </div> <!--End of hobbies-header-->
-        <div class="l-hobbies-container">
+         </div>
+         <!--End of hobbies-header-->
+         <div class="l-hobbies-container">
             <div class="footer-images">
-                <div class="f-image">
-                    <i class="fas fa-running fa-3x"></i>
-                </div>
-                <div class="f-image">
-                    <i class="fas fa-book-open fa-3x"></i>
-                </div>
-                <div class="f-image">
-                    <i class="fas fa-hiking fa-3x"></i>
-                </div>
-            </div> <!--footer-images container-->
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae nemo autem consequatur harum obcaecati, voluptas explicabo quasi voluptatum recusandae alias! Eveniet nulla repellat tenetur quia dignissimos nam? Nulla, odio excepturi?</p>
-        </div> <!--End of l-hobbies-container-->
-        <hr>
-        <p class="w3c-validation-para">
+               <div class="f-image">
+                  <i class="fas fa-running fa-3x"></i>
+               </div>
+               <div class="f-image">
+                  <i class="fas fa-book-open fa-3x"></i>
+               </div>
+               <div class="f-image">
+                  <i class="fas fa-hiking fa-3x"></i>
+               </div>
+            </div>
+            <!--footer-images container-->
+            <ul>
+               <li>Coding (of course!)</li>
+               <li>Rambling</li>
+               <li>Working Out</li>
+            </ul>
+         </div>
+         <!--End of l-hobbies-container-->
+         <hr>
+         <p class="w3c-validation-para">
             <a class="w3c-validation" href="http://jigsaw.w3.org/css-validator/check/referer">
-                <img style="border:0;width:88px;height:31px"
-                    src="http://jigsaw.w3.org/css-validator/images/vcss"
-                    alt="Valid CSS!" />
+            <img style="border:0;width:88px;height:31px"
+               src="http://jigsaw.w3.org/css-validator/images/vcss"
+               alt="Valid CSS!" />
             </a>
-        </p>
-
-    </aside> <!--End of l-Sidebar layout-->
-
-</body>
-
+         </p>
+      </aside>
+      <!--End of l-Sidebar layout-->
+   </body>
 </html>
