--- a/index.html
+++ b/index.html
@@ -15,6 +15,81 @@
          <h3><span class="freelance">Freela</span>nce Web Developer</h3>
          <hr class="header-hr">
       </header>
+      <!-- End of Page Header -->
+      <aside class="l-sidebar">
+         <div class="img-container">
+            <img src="imges/papersco-b_lCwJj2BP.jpg" alt="circular photo" width="200" height="200">
+         </div>
+         <div class="contact-header">
+            <h2>Contact</h2>
+         </div>
+         <!--End of contact-header-->
+         <div class="l-details-container">
+            <address>
+               <h5>Address</h5>
+               <p>Yorkshire, UK</p>
+            </address>
+            <div class="contact-details">
+               <h5>Mobile</h5>
+               <p>xxxxxxxxxxx</p>
+            </div>
+            <div class="contact-details">
+               <h5>Email</h5>
+               <a class="contact-details" href="mailto:leroyagroves71@gmail.com">leroyagroves71@gmail.com</a>
+            </div>
+            <div class="contact-details">
+               <h5>Website</h5>
+               <a class="contact-details" href="https://leroyagroves.github.io">https://leroyagroves.github.io</a>
+            </div>
+            <div class="contact-details">
+               <h5>Skype</h5>
+               <p>@username</p>
+            </div>
+         </div>
+         <!--End of l-details-container layout-->
+         <div class="about-me-header">
+            <h2>About Me</h2>
+         </div>
+         <div class="l-about-me-container">
+            <p>Hi I hope find this CV/Resume to be interesting reading. I am a <strong>'Career Changer'</strong>. As you will see from this CV, I began my working life as a Social Researcher, having worked for the British Civil Service (as a <em>Project Manager/Senior Research Officer</em>) and the University Sector (as a <em>Post Doc Researcher</em>).
+            </p>
+            <p>During the past two years I have become fascinated with web development and coding and have become a 'hobbyst' coder focusing primarily on Javascript. Inorder to add structure to my development and gain useful guidance and mentoring I have enrolled in the <em>Open Classrooms <a href="https://openclassrooms.com/en/paths/141-junior-web-developer">'Junior Developer Diploma'</a></em> programme</p>
+         </div>
+         <!--End of l-about-me-container-->
+         <div class="hobbies-header">
+            <h2>Hobbies</h2>
+         </div>
+         <!--End of hobbies-header-->
+         <div class="l-hobbies-container">
+            <div class="footer-images">
+               <div class="f-image">
+                  <i class="fas fa-running fa-3x"></i>
+               </div>
+               <div class="f-image">
+                  <i class="fas fa-book-open fa-3x"></i>
+               </div>
+               <div class="f-image">
+                  <i class="fas fa-hiking fa-3x"></i>
+               </div>
+            </div>
+            <!--footer-images container-->
+            <ul>
+               <li>Coding (of course!)</li>
+               <li>Rambling</li>
+               <li>Working Out</li>
+            </ul>
+         </div>
+         <!--End of l-hobbies-container-->
+         <hr>
+         <p class="w3c-validation-para">
+            <a class="w3c-validation" href="http://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px"
+               src="http://jigsaw.w3.org/css-validator/images/vcss"
+               alt="Valid CSS!" />
+            </a>
+         </p>
+      </aside>
+      <!--End of l-Sidebar layout-->
       <main class="l-main-content">
          <div class="education-title">
             <i class="fas fa-graduation-cap fa-lg"></i>
@@ -74,8 +149,8 @@
                <h3>University of Wales</h3>
                <h4><em>(MSc. Regional Development)</em></h4>
                <ul>
-                  <li>Local Economic Dev</li>
-                  <li>Technical Change & Regional Dev</li>
+                  <li>Local Economic Development</li>
+                  <li>Technical Change & Regional Development</li>
                   <li>Research Methods</li>
                   <li>Philosophy of Social Science</li>
                </ul>
@@ -183,79 +258,6 @@
          <hr>
       </main>
       <!--End of main section-->
-      <aside class="l-sidebar">
-         <div class="img-container">
-            <img src="imges/papersco-b_lCwJj2BP.jpg" alt="circular photo" width="200" height="200">
-         </div>
-         <div class="contact-header">
-            <h2>Contact</h2>
-         </div>
-         <!--End of contact-header-->
-         <div class="l-details-container">
-            <div class="contact-details">
-               <h5>Address</h5>
-               <p>Yorkshire, UK</p>
-            </div>
-            <div class="contact-details">
-               <h5>Mobile</h5>
-               <p>xxxxxxxxxxx</p>
-            </div>
-            <div class="contact-details">
-               <h5>Email</h5>
-               <p>leroyagroves71@gmail.com</p>
-            </div>
-            <div class="contact-details">
-               <h5>Website</h5>
-               <p>www.name.io</p>
-            </div>
-            <div class="contact-details">
-               <h5>Skype</h5>
-               <p>@username</p>
-            </div>
-         </div>
-         <!--End of l-details-container layout-->
-         <div class="about-me-header">
-            <h2>About Me</h2>
-         </div>
-         <div class="l-about-me-container">
-            <p>Hi I hope find this CV/Resume to be interesting reading. I am a <strong>'Career Changer'</strong>. As you will see from this CV, I began my working life as a Social Researcher, having worked for the British Civil Service (as a <em>Project Manager/Senior Research Officer</em>) and the University Sector (as a <em>Post Doc Researcher</em>).
-            </p>
-            <p>During the past two years I have become fascinated with web development and coding and have become a 'hobbyst' coder focusing primarily on Javascript. Inorder to add structure to my development and gain useful guidance and mentoring I have enrolled in the <em>Open Classrooms <a href="https://openclassrooms.com/en/paths/141-junior-web-developer">'Junior Developer Diploma'</a></em> programme</p>
-         </div>
-         <!--End of l-about-me-container-->
-         <div class="hobbies-header">
-            <h2>Hobbies</h2>
-         </div>
-         <!--End of hobbies-header-->
-         <div class="l-hobbies-container">
-            <div class="footer-images">
-               <div class="f-image">
-                  <i class="fas fa-running fa-3x"></i>
-               </div>
-               <div class="f-image">
-                  <i class="fas fa-book-open fa-3x"></i>
-               </div>
-               <div class="f-image">
-                  <i class="fas fa-hiking fa-3x"></i>
-               </div>
-            </div>
-            <!--footer-images container-->
-            <ul>
-               <li>Coding (of course!)</li>
-               <li>Rambling</li>
-               <li>Working Out</li>
-            </ul>
-         </div>
-         <!--End of l-hobbies-container-->
-         <hr>
-         <p class="w3c-validation-para">
-            <a class="w3c-validation" href="http://jigsaw.w3.org/css-validator/check/referer">
-            <img style="border:0;width:88px;height:31px"
-               src="http://jigsaw.w3.org/css-validator/images/vcss"
-               alt="Valid CSS!" />
-            </a>
-         </p>
-      </aside>
-      <!--End of l-Sidebar layout-->
+      
    </body>
 </html>
